--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,13 +16,14 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    border: 1px solid white;
    
 }
 
 .container {
     max-width: 80vw;
     @include mobile-portrait {
-        max-width: 90vw;
+        max-width: 85vw;
     }
     border: 1px solid white;
 }
